@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-09T08:28:28Z",
+  "timestamp" : "2022-09-09T16:28:30Z",
   "count_outdated" : 2388,
   "uniques_outdated" : 571,
-  "count" : 2434,
+  "count" : 2435,
   "uniques" : 605,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-09-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
