@@ -1,5 +1,5 @@
 {
-  "count": 46,
+  "count": 47,
   "uniques": 20,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-09-09T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
