@@ -1,3 +1,11 @@
+2022-09-09T16:28:30Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3023901692
+* notice: last 14d: unq all: 20 47
+* notice: prev accum: outdated-unq outdated-all / unq all: 571 2388 / 605 2434
+* notice: next accum: outdated-unq outdated-all / unq all: 571 2388 / 605 2435
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2022-09-09]
+
 2022-09-09T08:28:28Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3021027736
 * notice: last 14d: unq all: 20 46
